--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -1,3 +1,4 @@
+{% load blog_tags %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -7,12 +8,43 @@
 </head>
 <body>
 <div id="content">
+    {% if messages %}
+        {% for message in messages %}
+            {{ message.tags }} {{ message }}
+        {% endfor %}
+    {% endif %}
     {% block content %}
     {% endblock %}
 </div>
 <div id="sidebar">
     <h2>My blog</h2>
-    <p>This is my blog.</p>
+    <p>
+        This is my blog.
+        I've written {% total_posts %} posts so far.
+    </p>
+    <hr>
+    {% if user.is_authenticated %}
+        Hi {{ user.username }}!
+        <p><a href="{% url 'users-profile' %}">My profile</a></p>
+        <p><a href="{% url 'logout' %}">Log Out</a></p>
+    {% else %}
+        <p>You are not logged in</p>
+        <p><a href="{% url 'login' %}">Log In</a></p>
+        <p><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
+    {% endif %}
+    <hr>
+
+    <h3>Latest posts</h3>
+    {% show_latest_posts 3 %}
+    <h3>Most commented posts</h3>
+    {% get_most_commented_posts as most_commented_posts %}
+    <ul>
+        {% for post in most_commented_posts %}
+            <li>
+                <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+            </li>
+        {% endfor %}
+    </ul>
 </div>
 </body>
 </html>
