--- a/templates/blog/post/detail.html
+++ b/templates/blog/post/detail.html
@@ -1,19 +1,21 @@
 {% extends "blog/base.html" %}
-
+{% load blog_tags %}
+<a href="{% url "blog:post_list" %}">
+    Return to posts page
+</a>
 {% block title %}{{ post.title }}{% endblock %}
 
 {% block content %}
-    <p>
-        <a href="{% url "blog:post_list" %}">
-            Return to posts page
-        </a>
-    </p>
     <h1>{{ post.title }}</h1>
     <p class="date">
         Published {{ post.publish }} by {{ post.author }}
     </p>
-    {{ post.body|linebreaks }}
-
+    {{ post.body|markdown }}
+    <p>
+        <a href="{% url "blog:post_share" post.id %}">
+            Share this post
+        </a>
+    </p>
     <h2>Similar posts</h2>
     {% for post in similar_posts %}
         <p>
@@ -41,3 +43,4 @@
     {% endfor %}
     {% include "blog/post/includes/comment_form.html" %}
 {% endblock %}
+
